--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Quokka</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Clear up this mess -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="email_hint">E-MAIL</string>
     <string name="password_hint">PASSWORD</string>
